Add selector IDs to container and displays

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <section class="outside-column fire">
       <div class="icon">🔥</div>
       <!-- <div>&#x1F525;</div> -->
-      <h2>1 win</h2>
+      <h2 id="player1">1 win</h2>
     </section>
     <section class="inner-column">
       <h1>placeholder</h1>
-      <section class="game-container">
+      <section class="game-container" id="game-container">
         <div id="space0">🔥</div>
         <div id="space1"></div>
         <div id="space2"></div>
@@ -32,7 +32,7 @@
     <section class="outside-column ice">
       <div class="icon">❄️</div>
       <!-- <div>&#x2744;</div> -->
-      <h2>0 wins</h2>
+      <h2 id="player2">0 wins</h2>
     </section>
     <script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="player.js"></script>
