Add class to all game-spaces for query selector

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <section class="outside-column fire">
       <div class="icon">🔥</div>
       <!-- <div>&#x1F525;</div> -->
-      <h2 id="player1">1 win</h2>
+      <h2 id="player1">0 wins</h2>
     </section>
     <section class="inner-column">
       <h1>placeholder</h1>
       <section class="game-container" id="game-container">
-        <div id="space0">🔥</div>
-        <div id="space1"></div>
-        <div id="space2"></div>
-        <div id="space3"></div>
-        <div id="space4">❄️</div>
-        <div id="space5"></div>
-        <div id="space6"></div>
-        <div id="space7"></div>
-        <div id="space8"></div>
+        <div class="game-spaces" id="space0"></div>
+        <div class="game-spaces" id="space1"></div>
+        <div class="game-spaces" id="space2"></div>
+        <div class="game-spaces" id="space3"></div>
+        <div class="game-spaces" id="space4"></div>
+        <div class="game-spaces" id="space5"></div>
+        <div class="game-spaces" id="space6"></div>
+        <div class="game-spaces" id="space7"></div>
+        <div class="game-spaces" id="space8"></div>
       </section>
     </section>
     <section class="outside-column ice">
