Change player banner selectors to a single class

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
   <body>
     <section class="outside-column fire">
       <div class="icon">🔥</div>
-      <!-- <div>&#x1F525;</div> -->
-      <h2 id="player1">0 wins</h2>
+      <h2 class="player-banners">0 wins</h2>
     </section>
     <section class="inner-column">
-      <h1>placeholder</h1>
+      <h1 id="game-banner">placeholder</h1>
       <section class="game-container" id="game-container">
         <div class="game-spaces" id="space0"></div>
         <div class="game-spaces" id="space1"></div>
@@ -31,8 +30,7 @@
     </section>
     <section class="outside-column ice">
       <div class="icon">❄️</div>
-      <!-- <div>&#x2744;</div> -->
-      <h2 id="player2">0 wins</h2>
+      <h2 class="player-banners">0 wins</h2>
     </section>
     <script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="player.js"></script>
