Remove game banner placeholder text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="player-banners">0 wins</h2>
     </section>
     <section class="inner-column">
-      <h1 id="game-banner">placeholder</h1>
+      <h1 id="game-banner"></h1>
       <section class="game-container" id="game-container">
         <div class="game-spaces" id="space0"></div>
         <div class="game-spaces" id="space1"></div>
