--- a/index.html
+++ b/index.html
@@ -27,6 +27,34 @@
         <div class="grid spaces" id="space7"></div>
         <div class="grid spaces" id="space8"></div>
       </section>
+      <section class="animation-container">
+        <div class="animation snowflakes hidden" id="snowflakes">
+          <div class="snowflake">❄️</div>
+          <div class="snowflake">❄️</div>
+          <div class="snowflake">❄️</div>
+          <div class="snowflake">❄️</div>
+          <div class="snowflake">❄️</div>
+          <div class="snowflake">❄️</div>
+          <div class="snowflake">❄️</div>
+          <div class="snowflake">❄️</div>
+          <div class="snowflake">❄️</div>
+          <div class="snowflake">❄️</div>
+          <div class="snowflake">❄️</div>
+        </div>
+        <div class="animation flames hidden" id="flames">
+          <div class="flame">🔥</div>
+          <div class="flame">🔥</div>
+          <div class="flame">🔥</div>
+          <div class="flame">🔥</div>
+          <div class="flame">🔥</div>
+          <div class="flame">🔥</div>
+          <div class="flame">🔥</div>
+          <div class="flame">🔥</div>
+          <div class="flame">🔥</div>
+          <div class="flame">🔥</div>
+          <div class="flame">🔥</div>
+        </div>
+      </section>
     </section>
     <section class="outside-column ice">
       <div class="icon">❄️</div>
