--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="grid spaces" id="space8"></div>
       </section>
       <section class="animation-container">
-        <div class="animation snowflakes hidden" id="snowflakes">
+        <div class="animation snowflakes hidden" id="❄️">
           <div class="snowflake">❄️</div>
           <div class="snowflake">❄️</div>
           <div class="snowflake">❄️</div>
@@ -41,7 +41,7 @@
           <div class="snowflake">❄️</div>
           <div class="snowflake">❄️</div>
         </div>
-        <div class="animation flames hidden" id="flames">
+        <div class="animation flames hidden" id="🔥">
           <div class="flame">🔥</div>
           <div class="flame">🔥</div>
           <div class="flame">🔥</div>
