Add clear button for local storage

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </section>
     <section class="inner-column">
       <h1 id="gameBanner"></h1>
+      <button id="clear">Clear History</button>
       <section class="game-container" id="gameContainer">
         <div class="grid spaces" id="space0"></div>
         <div class="grid spaces" id="space1"></div>
