Add additional falling icons

--- a/index.html
+++ b/index.html
@@ -40,8 +40,16 @@
           <div class="snowflake">❄️</div>
           <div class="snowflake">❄️</div>
           <div class="snowflake">❄️</div>
+          <div class="snowflake">❄️</div>
+          <div class="snowflake">❄️</div>
+          <div class="snowflake">❄️</div>
+          <div class="snowflake">❄️</div>
         </div>
         <div class="animation flames hidden" id="🔥">
+          <div class="flame">🔥</div>
+          <div class="flame">🔥</div>
+          <div class="flame">🔥</div>
+          <div class="flame">🔥</div>
           <div class="flame">🔥</div>
           <div class="flame">🔥</div>
           <div class="flame">🔥</div>
