Remove classes no longer needed for styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
-    <section class="outside-column fire">
+    <section class="outside-columns">
       <div class="icon">🔥</div>
       <h2 class="player-banners">0 wins</h2>
     </section>
@@ -64,7 +64,7 @@
         </div>
       </section>
     </section>
-    <section class="outside-column ice">
+    <section class="outside-columns">
       <div class="icon">❄️</div>
       <h2 class="player-banners">0 wins</h2>
     </section>
