--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     </section>
     <section class="inner-column">
       <h1 id="gameBanner"></h1>
-      <button id="clear">Clear History</button>
       <section class="game-container" id="gameContainer">
         <div class="grid spaces" id="space0"></div>
         <div class="grid spaces" id="space1"></div>
@@ -28,6 +27,7 @@
         <div class="grid spaces" id="space7"></div>
         <div class="grid spaces" id="space8"></div>
       </section>
+      <button id="clear"><span>Clear History</span></button>
       <section class="animation-container">
         <div class="animation snowflakes hidden" id="❄️">
           <div class="snowflake">❄️</div>
